--- a/src/main/resources/view/forgotPassword.fxml
+++ b/src/main/resources/view/forgotPassword.fxml
@@ -11,7 +11,7 @@
    <children>
       <AnchorPane fx:id="emailPane" layoutX="148.0" layoutY="100.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TextField fx:id="email_tf" layoutX="258.0" layoutY="85.0" onAction="#verifyEmail" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="email_tf" layoutX="258.0" layoutY="85.0" onAction="#verifyEmail" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../css/signup.css" />
             <Label layoutX="76.0" layoutY="87.0" text="Enter your email:">
                <font>
                   <Font name="System Bold" size="20.0" />
@@ -22,13 +22,13 @@
                   <Font name="System Bold" size="22.0" />
                </font>
             </Label>
-            <Button fx:id="verify_btn" layoutX="197.0" layoutY="268.0" mnemonicParsing="false" onAction="#verifyEmail" style="-fx-cursor: hand;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Change password">
+            <Button fx:id="verify_btn" layoutX="197.0" layoutY="268.0" mnemonicParsing="false" onAction="#verifyEmail" style="-fx-cursor: hand;" styleClass="btn" stylesheets="@../css/signup.css" text="Change password">
                <font>
                   <Font size="15.0" />
                </font>
             </Button>
-            <PasswordField fx:id="confirmPassword_tf" layoutX="258.0" layoutY="206.0" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <PasswordField fx:id="newPassword_tf" layoutX="258.0" layoutY="143.0" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <PasswordField fx:id="confirmPassword_tf" layoutX="258.0" layoutY="206.0" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../css/signup.css" />
+            <PasswordField fx:id="newPassword_tf" layoutX="258.0" layoutY="143.0" prefHeight="34.0" prefWidth="230.0" styleClass="btn" stylesheets="@../css/signup.css" />
             <Label layoutX="42.0" layoutY="145.0" text="Enter new password:">
                <font>
                   <Font name="System Bold" size="20.0" />
