--- a/src/main/resources/view/login.fxml
+++ b/src/main/resources/view/login.fxml
@@ -18,9 +18,9 @@
       <AnchorPane maxWidth="800.0" prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
             <FontAwesomeIcon fill="#109152" glyphName="USER" layoutX="49.0" layoutY="145.0" size="2em" />
-            <TextField fx:id="tf_Username" layoutX="75.0" layoutY="124.0" prefHeight="26.0" prefWidth="151.0" promptText="Username" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <PasswordField fx:id="tf_Password" layoutX="75.0" layoutY="168.0" onAction="#showPassword" prefHeight="26.0" prefWidth="151.0" promptText="Password" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <Button fx:id="login_Btn" layoutX="174.0" layoutY="216.0" mnemonicParsing="false" onAction="#Login" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Log In" textFill="WHITE">
+            <TextField fx:id="tf_Username" layoutX="75.0" layoutY="124.0" prefHeight="26.0" prefWidth="151.0" promptText="Username" styleClass="btn" stylesheets="@../css/signup.css" />
+            <PasswordField fx:id="tf_Password" layoutX="75.0" layoutY="168.0" onAction="#showPassword" prefHeight="26.0" prefWidth="151.0" promptText="Password" styleClass="btn" stylesheets="@../css/signup.css" />
+            <Button fx:id="login_Btn" layoutX="174.0" layoutY="216.0" mnemonicParsing="false" onAction="#Login" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../css/signup.css" text="Log In" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
@@ -40,7 +40,7 @@
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
                </graphic></Button>
-            <TextField fx:id="textfieldPassword" layoutX="75.0" layoutY="168.0" onAction="#showPassword" prefHeight="26.0" prefWidth="151.0" styleClass="btn" stylesheets="@../../../css/signup.css" visible="false" />
+            <TextField fx:id="textfieldPassword" layoutX="75.0" layoutY="168.0" onAction="#showPassword" prefHeight="26.0" prefWidth="151.0" styleClass="btn" stylesheets="@../css/signup.css" visible="false" />
             <Button fx:id="hideBtn" layoutX="201.0" layoutY="168.0" mnemonicParsing="false" onAction="#hidePassword" prefHeight="26.0" prefWidth="14.0" style="-fx-cursor: hand; -fx-background-color: transparent;" visible="false">
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
@@ -61,7 +61,7 @@
             </Label>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/fiek-logo-photoaidcom-cropped.jpg" />
+                  <Image url="@../img/fiek-logo-photoaidcom-cropped.jpg" />
                </image>
             </ImageView>
             <RadioButton fx:id="language_AL_button" layoutX="45.0" layoutY="6.0" mnemonicParsing="false" text="AL" textFill="WHITE">
@@ -76,12 +76,12 @@
             </RadioButton>
             <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="10.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/download.jpg" />
+                  <Image url="@../img/download.jpg" />
                </image>
             </ImageView>
             <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="108.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/downloadd.png" />
+                  <Image url="@../img/downloadd.png" />
                </image>
             </ImageView>
          </children>
