--- a/src/main/resources/view/sign-up.fxml
+++ b/src/main/resources/view/sign-up.fxml
@@ -28,17 +28,17 @@
             </RadioButton>
             <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/download.jpg" />
+                  <Image url="@../img/download.jpg" />
                </image>
             </ImageView>
             <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="112.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/downloadd.png" />
+                  <Image url="@../img/downloadd.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="56.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../img/fiek-logo-photoaidcom-cropped.jpg" />
+                  <Image url="@../img/fiek-logo-photoaidcom-cropped.jpg" />
                </image>
             </ImageView>
             <Label layoutX="75.0" layoutY="274.0" text="E-Alumni" textFill="WHITE">
@@ -60,27 +60,27 @@
                <font>
                   <Font name="Arial" size="12.0" />
                </font></Label>
-            <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" promptText="First Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" promptText="Last Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" promptText="First Name" styleClass="btn" stylesheets="@../css/signup.css" />
+            <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" promptText="Last Name" styleClass="btn" stylesheets="@../css/signup.css" />
             <FontAwesomeIcon fill="#109152" glyphName="USER_PLUS" layoutX="212.0" layoutY="65.0" size="5em" />
             <Label fx:id="email_Label" layoutX="49.0" layoutY="148.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
             <Label fx:id="password_Label" layoutX="23.0" layoutY="231.0" style="-fx-font-family: Arial;" text="Password" />
-            <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../../../css/signup.css" />
+            <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../css/signup.css" />
 
             <Label fx:id="alreadyHave_Label" layoutX="125.0" layoutY="315.0" style="-fx-text-fill: black;" text="Already have an account?">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="username" layoutX="91.0" layoutY="186.0" prefHeight="27.0" prefWidth="241.0" promptText="username" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <PasswordField fx:id="password" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" promptText="password" styleClass="btn" stylesheets="@../../../css/signup.css" />
-            <TextField fx:id="textfieldPassword" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../../../css/signup.css" visible="false" />
+            <TextField fx:id="username" layoutX="91.0" layoutY="186.0" prefHeight="27.0" prefWidth="241.0" promptText="username" styleClass="btn" stylesheets="@../css/signup.css" />
+            <PasswordField fx:id="password" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" promptText="password" styleClass="btn" stylesheets="@../css/signup.css" />
+            <TextField fx:id="textfieldPassword" layoutX="91.0" layoutY="225.0" onAction="#showPassword" prefHeight="27.0" prefWidth="241.0" styleClass="btn" stylesheets="@../css/signup.css" visible="false" />
             <Button fx:id="buttonShowPassword" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#showPassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent; -fx-cursor: hand;">
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
                </graphic>
             </Button>
-            <Button fx:id="signUpBtn" layoutX="100.0" layoutY="274.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
+            <Button fx:id="signUpBtn" layoutX="100.0" layoutY="274.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../css/signup.css" text="Sign up" textFill="WHITE" />
             <Button fx:id="switchToLogin_Btn" layoutX="267.0" layoutY="302.0" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="46.0" prefWidth="82.0" style="-fx-background-color: transparent; -fx-text-fill: #109152; -fx-cursor: hand;" text="Log in">
                <font>
                   <Font name="System Bold" size="15.0" />
